<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="horizontal"
    android:padding="10dp" >

    <TextView
        android:id="@+id/instructions_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_select" />
        
    <Button android:layout_height="wrap_content" 
		    android:text="@string/instructions_controls_label" 
		    android:contentDescription="@string/instructions_controls_label" 
		    android:textColor="@color/button" 
		    android:id="@+id/Button01main" 
		    android:layout_width="wrap_content" 
		    android:background="@drawable/background_button" 
		    android:layout_below="@+id/instructions_textView" 
		    android:layout_centerHorizontal="true"/>
		    
    <Button android:layout_height="wrap_content" 
		    android:text="@string/instructions_general_label" 
		    android:contentDescription="@string/instructions_general_label" 
		    android:textColor="@color/button" 
		    android:id="@+id/Button02main" 
		    android:layout_width="wrap_content" 
		    android:background="@drawable/background_button" 
		    android:layout_below="@+id/Button01main" 
		    android:layout_centerHorizontal="true"/>

</RelativeLayout>