<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="horizontal"
    android:padding="10dp" >

    <TextView
        android:id="@+id/interactionMode_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/interactionMode_select"
        android:text="@string/interactionMode_select" >
    </TextView>

    <Button
        android:id="@+id/blindMode_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/interactionMode_textView"
        android:layout_centerHorizontal="true"
        android:background="@drawable/background_button"
        android:contentDescription="@string/blindMode_label"
        android:text="@string/blindMode_label"
        android:textColor="@color/button" >
    </Button>

    <Button
        android:id="@+id/noBlindMode_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/blindMode_button"
        android:layout_centerHorizontal="true"
        android:background="@drawable/background_button"
        android:contentDescription="@string/noBlindMode_label"
        android:text="@string/noBlindMode_label"
        android:textColor="@color/button" >
    </Button>

</RelativeLayout>